2022-12-02 -> Actualitzar nom Aplicacio + pom - Canviar a singular les classes Client, ClientLogic, ClientDAO - Canviar nom aplicació a M03UF6PracTD - Canviar versió maven a 17

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>M03UF6Prac1</artifactId>
+    <artifactId>M03UF6PracTD</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <mainClass>presentacio.App</mainClass>
     </properties>
     <dependencies>
@@ -81,4 +81,5 @@
             </plugin>
         </plugins>
     </build>
+    <name>M03UF6PracTD</name>
 </project>
