03/12/2022 -> add clients, cleintsForm & producets, productesForm Views

--- a/pom.xml
+++ b/pom.xml
@@ -86,5 +86,5 @@
             </plugin>
         </plugins>
     </build>
-    <name>M03UF6PracTD</name>
+    <name>M03UF6PracTD_2</name>
 </project>
